--- a/org/blog/news.org
+++ b/org/blog/news.org
@@ -6,6 +6,42 @@
 
 @@html:<h1>News <a target="_blank" rel="noopener" class="nav-link" href="news.xml"><i class="fas fa-rss"></i></a></h1>@@
 
+* New article by Camille on using variance for representing intraspecific variability :article:student:
+:PROPERTIES:
+:PUBDATE:  2024-01-11 Thu 14:00
+:CUSTOM_ID: camille-article-beyond-variance
+:ID:       e82313fe-310a-40ce-be2b-2cd288df515c
+:END:
+
+*Jan. 11, 2024*\\
+The second [[doi:10.1101/2022.08.06.503032][article]] of Camille's PhD has been [[doi:10.24072/pci.ecology.100466][recommended]] by Matthieu Barbier for [[https://ecology.peercommunityin.org/][PCI Ecology]] based on reviews by Simon Blanchet and Bart Haegeman. This article has the following title^{\star} "Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure". In nature, a high proportion of intraspecific variability can emerge from unmeasured environmental variables varying in space and time, as shown in the [[doi:10.1101/2022.03.16.484259][first article of Camille's PhD]]. In this second article, we show that when individual performance are determined by a varying multidimensional environment (15 variables in our case), the fact of representing intraspecific variability with a variance around species means, when several dimensions of the environment are not observed, leads to incorrect simulations of community dynamics in term of number of coexisting species and community composition. When a variance is used to represent intraspecific variability, conspecific individuals (i.e. individuals from the same species) have different performance in the same environment. On the contrary, when observed intraspecific variability emerges from a variable environment in multiple dimensions, this does not imply that conspecific individuals are intrinsically different. In this case, conspecific individuals have identical performance in the same environment. This difference between random and structured intraspecific variability has large consequences on community dynamics in community models. When individual variability is random, community dynamics is stochastic, leading to an ecological drift and the extinction of many species. On the contrary, when intraspecific variability is the results of the variation of the environment in multiple dimensions, each species is able to outperform the other at some sites with particular environmental conditions, thus allowing the coexistence of a high number of species. This important distinction and the results of our study have been very well summarized in Matthieu Barbier's [[doi:https://doi.org/10.24072/pci.ecology.100466][recommendation]] untitled "Two paradigms for intraspecific variability".
+
+\star The title refers to the article by [[doi:10.1016/j.tree.2011.11.014][Violle et al. 2012]] "The return of the variance: intraspecific variability in community ecology".
+
+#+attr_html: :style display:block;margin:auto;max-width:80%;
+#+caption: *Effect of using a random variance around species means on the number of coexisting species.* PK is the Perfect Knowledge model with 15 environmental variables.
+[[file:images/blog/Girard-Tercieux2024-Peer_Community_Journal.jpg]]
+
+*Girard-Tercieux C., G. Vieilledent, A. T. Clark, J. S. Clark, B. Courbaud, C. Fortunel, G. Kunstler, R. Pélissier, N. Rüger, and I. Maréchaux.* 2024. Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure. /Peer Community in Ecology/. {{{doi(10.1101/2022.08.06.503032)}}}. /bioRxiv/: [[doi:10.1101/2022.08.06.503032][503032]]. {{{pdf(Girard-Tercieux2024-PCJournal.pdf)}}}
+
+*Barbier, M.* 2024. Two paradigms for intraspecific variability. /Peer Community in Ecology/, 100466. {{{doi(10.24072/pci.ecology.100466)}}}.
+
+* Moving to New Caledonia                                         :fieldwork:
+:PROPERTIES:
+:ID:       5ca308cd-8ec9-45b0-9817-4e7a6254ca13
+:CUSTOM_ID: moving-to-new-caledonia
+:PUBDATE:  2023-12-07 Thu 09:00
+:END:
+
+*Dec. 07, 2023*
+#+attr_html: :class blog_thumbnail :style margin-bottom:20px;
+#+attr_html: :title Beach and vegetation in Lifou, New Caledonia.
+[[file:images/blog/moving-to-new-caledonia_2.jpg]]
+
+I am moving with the family to [[https://en.wikipedia.org/wiki/New_Caledonia][New Caledonia]] for at least one year to study the functioning of tropical forest ecosystems there. I will be based at the [[https://www.ird.fr/nouvelle-caledonie/presentation][IRD research center in Noumea]]. During my stay, I will be affiliated to Cirad in the [[https://amap.cirad.fr/en/index.php][UMR AMAP]] (my current institution and lab) but also to the [[https://www.iac.nc/][IAC]] (Institut Agronomique néo-Calédonien), the Cirad historical partner in New Caledonia. I will collaborate with colleagues from IAC and UMR AMAP based at IRD, and in particular with [[https://www.researchgate.net/profile/Thomas-Ibanez][Thomas Ibanez]] who is also coming to perform ecological research in New Caledonia for several years. With Thomas, we plan to develop a network of permanent forest plots in the Melanesian islands (New Caledonia, Bismark archipelago, Solomon islands, Vanuatu, Fiji). We will also develop a forest monitoring system in New Caledonia using forest inventories, LiDAR data, and satellite images to identify changes in tropical forest cover and carbon stocks. Other research activities will include mapping tree communities and soil properties at the scale of New Caledonia to help decision on forest and biodiversity conservation. 
+
+#+html: <br style="clear:both;" />
+
 * Last INTRACO workshop at sDiv #6                                 :workshop:
 :PROPERTIES:
 :ID:       834126ca-02dc-4e82-ad7d-32111f873350
@@ -13,7 +49,7 @@
 :PUBDATE:  2023-09-29 Fri 09:00
 :END:
 
-*September 29, 2023*
+*Sep. 29, 2023*
 #+attr_html: :class blog_thumbnail :style margin-bottom:20px;
 #+attr_html: :title Group photo at sDiv in Leipzig in September 2023.
 [[file:images/blog/Intraco-group-photo-Leipzig-2023.jpg]]
@@ -29,7 +65,7 @@ The last [[file:research.html#projects][INTRACO]] workshop took place at sDiv in
 :PUBDATE:  2023-08-28 Mon 09:00
 :END:
 
-*August 28, 2023*
+*Aug. 28, 2023*
 
 The [[file:images/blog/article_figaro_forets_tropicales_20230826.pdf][article]] in Le Figaro (the second-largest national newspaper in France), presents the results of two scientific studies. The first study published in [[https://doi.org/10.1126/sciadv.adg9175][/Science Advances/]] shows that the productivity of tropical reforestation in Central America will decline sharply and continuously by -11% per degree of warming above 29°C of mean annual temperature. As a result, following high-emission pathways could reduce the effectiveness of reforestation as a climate action tool. The second study published in [[https://doi.org/10.1038/s41586-023-06391-z][/Nature/]] suggests that a tipping point in metabolic function in tropical forests could occur with 3.9 \pm 0.5°C of additional warming. Authors used a value of 46.7°C for $T_{crit}$, the temperature at which irreversible damage to the photosynthetic machinery occurs. The +4.0°C estimate is within the "worst-case scenario" (RCP 8.5) of climate change predictions for tropical forests. Massive tree deaths in tropical forests could therefore be avoided if we mitigate global warming by not following RCP 8.5.
 
@@ -40,7 +76,7 @@ The [[file:images/blog/article_figaro_forets_tropicales_20230826.pdf][article]] 
 :PUBDATE:  2023-07-13 Thu 18:00
 :END:
 
-*July 13, 2023*
+*Jul. 13, 2023*
 #+attr_html: :class blog_thumbnail
 #+attr_html: :title Vincent and Pierre-André collecting soil samples in the tropical forest of /Montagne de Kaw/ in French Guiana.
 [[file:images/blog/Soil_samples_metradica.jpg]]
@@ -56,7 +92,7 @@ For the [[file:research.html#projects][METRADICA]] project, Vincent Freycon and 
 :PUBDATE:  2023-06-23 Fri 09:00
 :END:
 
-*June 23, 2023*
+*Jun. 23, 2023*
 #+attr_html: :class blog_thumbnail
 #+attr_html: :title Coexisting tree species in a New Caledonian tropical forest.
 [[file:images/blog/Intraco.jpg]]
@@ -123,7 +159,7 @@ Philippe Birnbaum and Thomas Ibanez from UMR AMAP have compiled an impressive da
 *Mar. 10, 2023*\\
 We have organized a five-day workshop at AMAP in Montpellier on 6-10 March, 2023 for the [[file:research.html#metradica][METRADICA]] project. We had 12 participants in total along the week. We advanced the work on the different tasks of the project and discussed the first results obtained by Marion, Jeanne, and Salman since the beginning of their PhD and postdoc within the project.
 
-* Camille's first article on intraspecific variability     :article:student:
+* Camille's first article on rethinking the nature of intraspecific variability :article:student:
 :PROPERTIES:
 :ID:       963c802e-8f6e-4b6b-ad84-2e33476446aa
 :PUBDATE:  2023-03-09 Thu 14:36
