--- a/org/pages/people.org
+++ b/org/pages/people.org
@@ -26,7 +26,7 @@
 
 [[https://www.researchgate.net/profile/Salman-Khan-44][*Salman Khan*]], planned in 2023, Co-supervisors: Vincent Freycon and Isabelle Maréchaux, CNRS, UMR AMAP, /Improving the estimate of plant available water accounting for soil characteristics in tropical forests of French Guiana/, Current position: Post-doc in progress.
 
-[[https://www.researchgate.net/profile/Gregoire-Blanchard][*Grégoire Blanchard*]] (collaboration), planned in 2023, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /Using remote sensing data to characterize edge effects in New-Caledonian forests/, Current position: Post-doc in progress.
+[[https://www.researchgate.net/profile/Gregoire-Blanchard][*Grégoire Blanchard*]] (collaboration), planned in 2023, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /Using remote sensing data to characterize edge effects in New-Caledonian forests/, Current position: Researcher at Cirad, UR GECO.
 
 [[https://dimitri-justeau.github.io/][*Dimitri Justeau-Allaire*]] (collaboration), 2021, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /New tools to generate fragmented landscapes and compute landscape connectivity/, Current position: Researcher at IRD, UMR AMAP.
 
